--- a/ClickGame/Base.lproj/Main.storyboard
+++ b/ClickGame/Base.lproj/Main.storyboard
@@ -86,8 +86,8 @@
                             <constraint firstItem="7y9-qb-oDy" firstAttribute="top" secondItem="5SR-lP-vQg" secondAttribute="bottom" constant="20" id="Hy3-KK-WhM"/>
                             <constraint firstItem="0J6-I4-L3a" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="IZ9-wG-OiT"/>
                             <constraint firstAttribute="trailingMargin" secondItem="ytz-vY-7Ho" secondAttribute="trailing" id="Ped-pq-uMs"/>
-                            <constraint firstItem="0J6-I4-L3a" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="REy-nL-5fC"/>
-                            <constraint firstItem="ytz-vY-7Ho" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="SPF-ba-uN2"/>
+                            <constraint firstItem="0J6-I4-L3a" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="REy-nL-5fC"/>
+                            <constraint firstItem="ytz-vY-7Ho" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="SPF-ba-uN2"/>
                             <constraint firstItem="5SR-lP-vQg" firstAttribute="top" secondItem="ytz-vY-7Ho" secondAttribute="bottom" constant="20" id="Ukl-Ik-uOw"/>
                             <constraint firstAttribute="trailingMargin" secondItem="7y9-qb-oDy" secondAttribute="trailing" id="g3S-QN-Ujo"/>
                             <constraint firstItem="7y9-qb-oDy" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="heP-cG-hpV"/>
